Fix checklist action alignment

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -131,6 +131,8 @@ ul{
     text-align: center;
     vertical-align: middle;
     width: 25%;
+    display: flex;
+    align-items: center;
 }
 
 
